# boxed

./: README.md  package-lock.json  package.json
docs/: README.md  expressions.md  files.md  model.md  types.md  ui.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/expression/: error.rs  expression.rs  function.rs  grammar.ebnf  mod.rs  value.rs
src-tauri/src/expression/parser/: mod.rs  position.rs
src-tauri/src/expression/parser/ast/: assembler.rs  error.rs  mod.rs  node.rs
src-tauri/src/expression/parser/tokeniser/: error.rs  mod.rs  token.rs  tokeniser.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/settings/: page.tsx
src/components/grid/: grid.css  grid.tsx
src/components/splash/section/: section.css  section.tsx
src/components/splash/splash-new-selector/: splash-new-selector.tsx
src/components/splash/splash-open-selector/: splash-open-selector.tsx
src/components/statusline/: statusline.css  statusline.tsx
src/components/toolbar/: toolbar.css  toolbar.tsx
src/components/window-deco/: window-deco.css  window-deco.tsx
