[package]
name = "boxed"
version = "0.1.0"
description = "A Tauri App"
authors = ["Adam Kent"]
license = ""
repository = "https://www.github.com/lo9ud/boxed"
# default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "alloc"] }
tauri = { version = "1.6.1", features = [ "window-minimize", "window-unminimize", "window-hide", "window-maximize", "window-start-dragging", "window-close", "window-show", "window-unmaximize"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.60"
log = "0.4.21"
futures = "0.3.30"
flexi_logger = "0.29.0"
utf8-chars = "3.0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dev-dependencies]
once_cell = "1.19.0"
